<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="malte5211@gmail.com">malte</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  


  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
